Allow custom scrollbar cursor change by scroller style.

Bug: 876180
Change-Id: If3a169518796f82cf3abc319dd05d7845a449c82
Reviewed-on: https://chromium-review.googlesource.com/1185232
Reviewed-by: David Bokan <bokan@chromium.org>
Commit-Queue: Jianpeng Chao <chaopeng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585157}
Former-commit-id: dc221292ff296b826e6a97226bfb4e34160c964e